* move all pyth-related structs/constants under pyth-types

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ target/
 **/proptest-regressions/
 **/*.proptest-regressions
 
+# Upload the testdata for the pyth
+!pyth/client/testdata/
+
+
 # macOS
 **/.DS_Store
 
