--- a/dango/genesis/Cargo.toml
+++ b/dango/genesis/Cargo.toml
@@ -30,6 +30,7 @@ hyperlane-mailbox     = { workspace = true, features = ["library"] }
 hyperlane-merkle      = { workspace = true, features = ["library"] }
 hyperlane-types       = { workspace = true }
 hyperlane-va          = { workspace = true, features = ["library"] }
+pyth-types            = { workspace = true }
 serde                 = { workspace = true }
 
 [dev-dependencies]
