--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 exclude = ["indexer/.data"]
 members = [
+  "config-parser",
   "dango/account/*",
   "dango/app",
   "dango/auth",
@@ -85,6 +86,7 @@ clap                    = "4"
 clru                    = "0.6"
 colored                 = "3"
 colored_json            = "5"
+config                  = "0.15"
 criterion               = "0.5"
 data-encoding           = "2"
 dialoguer               = "0.11"
