--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ clap                    = "4"
 clru                    = "0.6"
 colored                 = "3"
 colored_json            = "5"
+config                  = "0.15"
 criterion               = "0.5"
 data-encoding           = "2"
 dialoguer               = "0.11"
