--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -19,6 +19,7 @@ bip32              = { workspace = true }
 clap               = { workspace = true, features = ["derive", "wrap_help"] }
 colored            = { workspace = true }
 colored_json       = { workspace = true }
+config             = { workspace = true }
 dango-app          = { workspace = true }
 dango-client       = { workspace = true }
 dango-genesis      = { workspace = true }
@@ -45,3 +46,6 @@ tower              = { workspace = true, features = ["full"] }
 tower-abci         = { workspace = true }
 tracing            = { workspace = true }
 tracing-subscriber = { workspace = true }
+
+[dev-dependencies]
+assertor = { workspace = true }
