--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,6 @@ book/papers/**/*.out
 book/papers/**/*.pdf
 book/papers/**/*.run.xml
 book/papers/**/*.synctex.gz
+
+# Devnet
+networks/devnet/data
