--- a/docker/dango/Dockerfile
+++ b/docker/dango/Dockerfile
@@ -2,7 +2,7 @@ FROM rust:1.85.0-slim
 
 # Install dependencies.
 RUN apt update \
-  && apt install -y clang git libssl-dev pkg-config postgresql-client
+  && apt install -y clang git libssl-dev pkg-config
 
 # Version of the left-curve monorepo.
 ARG LEFT_CURVE_GIT_COMMIT="8ec296f6"
@@ -18,12 +18,6 @@ RUN git clone https://github.com/left-curve/left-curve.git \
 # Expose the indexer httpd (8080) and Tendermint ABCI (26658) ports.
 EXPOSE 8080 26658
 
-# Copy the start script.
-COPY run.sh .
-
-# Make the script executable.
-RUN chmod +x run.sh
-
 # Run dango.
 # This assumes that the `app.toml` file have been mounted to `~/.dango/config/app.toml`.
-CMD ["./run.sh"]
+CMD ["dango", "start"]
