--- a/docker/dango/justfile
+++ b/docker/dango/justfile
@@ -1,6 +1,6 @@
-VERSION := "0.0.0-alpha.3"
+VERSION := "0.0.0-alpha.4"
 
-# TODO: allow specifying platform and build args (specifically, the git commit hash)
+# TODO: allow specifying version, platform, and build args via CLI arguments.
 build:
   docker buildx build \
     --load \
