add cometbft docker file and make the whole thing work

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,5 @@ book/papers/**/*.run.xml
 book/papers/**/*.synctex.gz
 
 # Network data
+networks/**/configs/cometbft/config/addrbook.json
 networks/**/data
