--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: postgres:17
     shm_size: 1gb
     ports:
-      - "127.0.0.1:5432:5432"
+      - 127.0.0.1:5432:5432
     volumes:
       - ./data/db:/var/lib/postgresql/data
     environment:
@@ -12,11 +12,12 @@ services:
     tty: true
 
   dango:
-    image: leftcurve/dango:0.0.0-alpha.4
+    image: leftcurve/dango:0.0.0-alpha.5
     depends_on:
       - db
     ports:
-      - "127.0.0.1:8080:8080"
+      - 127.0.0.1:8080:8080
+      - 127.0.0.1:26658:26658
     volumes:
       - ./configs/dango/config:/root/.dango/config
       - ./data/dango/data:/root/.dango/data
@@ -27,4 +28,17 @@ services:
       - DB_USER=postgres
       - DB_NAME=grug_dev
       - INDEXER__DATABASE_URL=postgres://postgres@db:5432/grug_dev
+    tty: true
+
+  cometbft:
+    image: leftcurve/cometbft:0.38.17
+    depends_on:
+      - dango
+    ports:
+      - 127.0.0.1:26656:26656
+      - 127.0.0.1:26657:26657
+      # - 127.0.0.1:26658:26658
+    volumes:
+      - ./configs/cometbft/config:/root/.cometbft/config
+      - ./data/cometbft/data:/root/.cometbft/data
     tty: true
