--- a/docker/cometbft/justfile
+++ b/docker/cometbft/justfile
@@ -1,9 +1,10 @@
-VERSION := "0.0.0-alpha.5"
+COMETBFT_VERSION := "0.38.17"
 
 # TODO: allow specifying version, platform, and build args via CLI arguments.
 build:
   docker buildx build \
     --load \
     --platform linux/arm64 \
-    --tag leftcurve/dango:{{VERSION}} \
+    --build-arg COMETBFT_GIT_TAG=v{{COMETBFT_VERSION}} \
+    --tag leftcurve/cometbft:{{COMETBFT_VERSION}} \
     .
