--- a/networks/localdango/configs/dango/config/app.toml
+++ b/networks/localdango/configs/dango/config/app.toml
@@ -52,10 +52,10 @@ port = 8080
 [tendermint]
 
 # Tendermint RPC listening address.
-rpc_addr = "http://127.0.0.1:26657"
+rpc_addr = "http://0.0.0.0:26657"
 
 # Tendermint ABCI listening address.
-abci_addr = "http://127.0.0.1:26658"
+abci_addr = "0.0.0.0:26658"
 
 ################################################################################
 ###                        Transaction Configuration                         ###
