--- a/networks/localdango/justfile
+++ b/networks/localdango/justfile
@@ -63,11 +63,17 @@ start:
     echo "Database {{DB_NAME}} successfully created."
   fi
 
-  # 4. Run the cometbft service in detached mode.
-  # Since cometbft depends on dango, this also starts the dango service.
-  docker compose up -d dango
+  # 4. Check whether cometbft data already exists. If not, create it.
+  if [[ ! -f "data/cometbft/data/priv_validator_state.json" ]]; then
+    mkdir -p data/cometbft/data
+    echo '{"height":"0","round":0,"step":0}' > data/cometbft/data/priv_validator_state.json
+  fi
 
-  # 5. Follow the logs of dango.
+  # 5. Run the cometbft service in detached mode.
+  # Since cometbft depends on dango, this also starts the dango service.
+  docker compose up -d cometbft
+
+  # 6. Follow the logs of dango.
   docker compose logs -f dango
 
 # Stop the localnet
