* change base_url parameter to IntoUrl

--- a/dango/app/Cargo.toml
+++ b/dango/app/Cargo.toml
@@ -17,6 +17,7 @@ grug-app     = { workspace = true }
 prost        = { workspace = true }
 pyth-client  = { workspace = true }
 pyth-types   = { workspace = true }
+reqwest      = { workspace = true }
 thiserror    = { workspace = true }
 tokio        = { workspace = true }
 tokio-stream = { workspace = true }
