--- a/ui/config/package.json
+++ b/ui/config/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "exports": {
     "./fonts/*": "./fonts/*",
-    "./tailwind/*": "./tailwind/*"
+    "./tailwind/*": "./tailwind/*",
+    "./messages/*": "./messages/*",
+    "./inlang/*": "./project.inlang/*"
+  },
+  "scripts":{
+    "inlang": "inlang",
+    "machine-translate": "inlang machine translate --project ./project.inlang"
   },
   "dependencies": {
+    "@inlang/cli": "^3.0.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "catalog:",
     "tailwindcss-animate": "^1.0.7"
