feat: translations and ui improvements

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "paths": {
       "~/*": ["./src/*"],
-      "~/paraglide/*": ["./paraglide/*"]
+      "~/paraglide/*": ["./.paraglide/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", "env.d.ts", "paraglide"],
