--- a/ui/config/project.inlang/settings.json
+++ b/ui/config/project.inlang/settings.json
@@ -1,26 +1,7 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
   "baseLocale": "en",
-  "locales": [
-    "en",
-    "es",
-    "de",
-    "it",
-    "fa",
-    "fr",
-    "gu",
-    "hi",
-    "ja",
-    "ko",
-    "pl",
-    "pt-br",
-    "ro",
-    "ru",
-    "tr",
-    "zh-cn",
-    "zh-hk",
-    "zh-tw"
-  ],
+  "locales": ["en"],
   "modules": [
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-message-format@4/dist/index.js",
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@2/dist/index.js",
