feat(ui): multi-language (#534)
* feat: inlang multi language

* feat: translations and ui improvements

* fix: AssetsPreview old reference

* chore: delete machine translations

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -2,10 +2,11 @@
   "extends": ["@left-curve/config/ts/react.json"],
   "compilerOptions": {
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "~/paraglide/*": ["./.paraglide/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts"],
+  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", "paraglide"],
   "exclude": ["node_modules"],
   "references": [
     {
