--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,11 @@ next-env.d.ts
 *storybook.log
 **/storybook-static
 **/.expo
+**/.paraglide
 app.pages.ts
+ui/config/project.inlang/*
+!ui/config/project.inlang/settings.json
+!ui/config/project.inlang/project_id
 
 # Envs
 **/.env
