--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ elsa                    = "1"
 futures                 = "0.3"
 futures-util            = "0.3"
 glob                    = "0.3"
+graphql_client          = "0.14"
 hex                     = "0.4"
 hex-literal             = "0.4"
 home                    = "0.5"
