--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -26,10 +26,12 @@ async-graphql-actix-web = { workspace = true }
 base64                  = { workspace = true }
 chrono                  = { workspace = true }
 clap                    = { workspace = true }
+graphql_client          = { workspace = true }
 grug-app                = { workspace = true }
 grug-types              = { workspace = true }
 indexer-sql             = { workspace = true }
 num_cpus                = { workspace = true }
+paste                   = { workspace = true }
 sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
 serde_json              = { workspace = true }
@@ -45,3 +47,4 @@ uuid                    = { workspace = true }
 
 [dev-dependencies]
 assertor = { workspace = true }
+reqwest  = { workspace = true, features = ["json"] }
