--- a/grug/std/Cargo.toml
+++ b/grug/std/Cargo.toml
@@ -25,7 +25,8 @@ grug-ffi = { workspace = true }
 
 # The client and testing crates are only included when _not_ building for WebAseembly.
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-grug-client  = { workspace = true }
-grug-testing = { workspace = true }
+grug-provider   = { workspace = true }
+grug-rpc-client = { workspace = true }
+grug-testing    = { workspace = true }
 
 [dev-dependencies]
