--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -29,9 +29,9 @@ data-encoding      = { workspace = true }
 dialoguer          = { workspace = true }
 futures            = { workspace = true }
 grug-app           = { workspace = true, features = ["abci", "tracing"] }
-grug-client        = { workspace = true }
 grug-db-disk       = { workspace = true }
 grug-jmt           = { workspace = true }
+grug-rpc-client    = { workspace = true }
 grug-types         = { workspace = true }
 grug-vm-hybrid     = { workspace = true }
 hex                = { workspace = true }
