fix: dependency with date-fns

--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@tanstack/router-plugin": "^1.102.1",
     "@tanstack/zod-adapter": "catalog:",
+    "date-fns": "^4.1.0",
     "framer-motion": "catalog:",
     "react": "catalog:",
     "react-dom": "catalog:",
@@ -31,6 +32,7 @@
     "@rsbuild/core": "catalog:",
     "@rsbuild/plugin-react": "catalog:",
     "@tanstack/router-devtools": "catalog:",
+    "@types/date-fns": "^2.6.3",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
