feat(dex): implement volume tracking

--- a/dango/dex/Cargo.toml
+++ b/dango/dex/Cargo.toml
@@ -18,9 +18,11 @@ crate-type = ["cdylib", "rlib"]
 library = []
 
 [dependencies]
-anyhow      = { workspace = true }
-dango-types = { workspace = true }
-grug        = { workspace = true }
+anyhow                = { workspace = true }
+dango-account-factory = { workspace = true, features = ["library"] }
+dango-oracle          = { workspace = true, features = ["library"] }
+dango-types           = { workspace = true }
+grug                  = { workspace = true }
 
 [dev-dependencies]
 test-case = { workspace = true }
