--- a/pyth/client/Cargo.toml
+++ b/pyth/client/Cargo.toml
@@ -13,15 +13,19 @@ version       = { workspace = true }
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+async-stream        = { workspace = true }
+async-trait         = { workspace = true }
 grug                = { workspace = true }
 grug-app            = { workspace = true }
 indexer-disk-saver  = { workspace = true }
 pyth-types          = { workspace = true }
 reqwest             = { workspace = true, features = ["blocking", "json"] }
 reqwest-eventsource = { workspace = true }
+thiserror           = { workspace = true }
 tokio               = { workspace = true }
 tokio-stream        = { workspace = true }
 tracing             = { workspace = true }
+url                 = { workspace = true }
 
 [dev-dependencies]
 dango-types = { workspace = true }
