Add a BlockTransactions dataloader

--- a/indexer/httpd/Cargo.toml
+++ b/indexer/httpd/Cargo.toml
@@ -29,6 +29,7 @@ clap                    = { workspace = true }
 grug-app                = { workspace = true }
 grug-types              = { workspace = true }
 indexer-sql             = { workspace = true }
+itertools               = { workspace = true }
 num_cpus                = { workspace = true }
 sea-orm                 = { workspace = true }
 serde                   = { workspace = true }
