--- a/grug/testing/Cargo.toml
+++ b/grug/testing/Cargo.toml
@@ -28,16 +28,17 @@ tracing            = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 [dev-dependencies]
-assertor        = { workspace = true }
-async-graphql   = { workspace = true }
-borsh           = { workspace = true, features = ["de_strict_order", "derive"] }
-grug-storage    = { workspace = true }
-indexer-httpd   = { workspace = true }
-indexer-sql     = { workspace = true, features = ["tracing"] }
-indexer-testing = { workspace = true }
-prost           = { workspace = true }
-reqwest         = { workspace = true, features = ["blocking", "json"] }
-sea-orm         = { workspace = true }
-test-case       = { workspace = true }
-thiserror       = { workspace = true }
-tokio           = { workspace = true }
+assert-json-diff = { workspace = true }
+assertor         = { workspace = true }
+async-graphql    = { workspace = true }
+borsh            = { workspace = true, features = ["de_strict_order", "derive"] }
+grug-storage     = { workspace = true }
+indexer-httpd    = { workspace = true }
+indexer-sql      = { workspace = true, features = ["tracing"] }
+indexer-testing  = { workspace = true }
+prost            = { workspace = true }
+reqwest          = { workspace = true, features = ["blocking", "json"] }
+sea-orm          = { workspace = true }
+test-case        = { workspace = true }
+thiserror        = { workspace = true }
+tokio            = { workspace = true }
