feat: adjust style for settings page

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -6,7 +6,7 @@
       "~/paraglide/*": ["./.paraglide/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", "paraglide"],
+  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide"],
   "exclude": ["node_modules"],
   "references": [
     {
