--- a/networks/localdango/justfile
+++ b/networks/localdango/justfile
@@ -80,6 +80,10 @@ start:
 stop:
   docker compose down --remove-orphans
 
+# Delete the generate data in order to restarta new localnet from scratch
+reset:
+  rm -rfv ./data
+
 # Run the development database
 run-dev-db:
   docker compose up db
