--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -6,9 +6,12 @@ services:
       - 127.0.0.1:5432:5432
     volumes:
       - ./data/db:/var/lib/postgresql/data
+      # For when we'll need an init script ran at initialization
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_HOST_AUTH_METHOD=trust
+      - POSTGRES_DB=grug_dev
     tty: true
 
   dango:
