chore: incremental builds

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -4,10 +4,14 @@
     "paths": {
       "~/*": ["./src/*"],
       "~/paraglide/*": ["./.paraglide/*"]
-    }
+    },
+    "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide"],
-  "exclude": ["node_modules", ".paraglide"],
+  "buildOptions": {
+    "incremental": true
+  },
+  "include": ["**/*.ts", "**/*.tsx", "env.d.ts"],
+  "exclude": ["node_modules"],
   "references": [
     {
       "path": "../../applets/kit"
