--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ book/papers/**/*.out
 book/papers/**/*.pdf
 book/papers/**/*.run.xml
 book/papers/**/*.synctex.gz
+
+# Network data
+networks/**/configs/cometbft/config/addrbook.json
+networks/**/configs/cometbft/config/write-file-atomic-*
+networks/**/data
