feat: show errors in send and receive

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true
   },
   "buildOptions": {
-    "incremental": true
+    "incremental": false
   },
   "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide/**/*.js"],
   "exclude": ["node_modules"],
