--- a/ui/store/react/tsconfig.json
+++ b/ui/store/react/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": "src"
   },
   "buildOptions": {
-    "incremental": true
+    "incremental": false
   },
   "include": ["src"],
   "exclude": ["node_modules"],
