feat(ui): lazy loading (#550)
* fix: jump when login carousel

* fix: error with paraglide tsconfig

* fix: search bar safari and update media query hook

* chore: incremental builds

* fix: disable beep on scan

* refactor: lazy pages

* feat: replace viem for ox

* chore: login no lazy

* feat: home button in signin

* fix: hash typed data

* fix: search bar when on press command

* feat: sorted assets by balance in overview

* fix: make send not lazy

* feat: logo dango in header when scrolling

* feat: show errors in send and receive

* fix: support coins with same coingeckoId

* fix: currency formatter

--- a/ui/portal/web/tsconfig.json
+++ b/ui/portal/web/tsconfig.json
@@ -4,9 +4,13 @@
     "paths": {
       "~/*": ["./src/*"],
       "~/paraglide/*": ["./.paraglide/*"]
-    }
+    },
+    "noEmit": true
   },
-  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide"],
+  "buildOptions": {
+    "incremental": false
+  },
+  "include": ["**/*.ts", "**/*.tsx", "env.d.ts", ".paraglide/**/*.js"],
   "exclude": ["node_modules"],
   "references": [
     {
