--- a/sdk/dango/tsconfig.json
+++ b/sdk/dango/tsconfig.json
@@ -5,6 +5,9 @@
     "outDir": "build",
     "rootDir": "src"
   },
+  "buildOptions": {
+    "incremental": false
+  },
   "include": ["src"],
   "exclude": ["node_modules", "build"],
   "references": [
