Add a BlockTransactions dataloader (#547)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ actix-web               = "4"
 aes-gcm                 = "0.10"
 alloy                   = "0.11"
 anyhow                  = "1"
+assert-json-diff        = "0"
 assertor                = { version = "0.0", git = "https://github.com/google/assertor" }
 async-graphql-actix-web = "7.0"
 async-std               = { version = "1", features = ["attributes", "tokio1"] }
@@ -100,6 +101,7 @@ hex                     = "0.4"
 hex-literal             = "0.4"
 home                    = "0.5"
 ics23                   = "0.12"
+itertools               = "0"
 k256                    = "0.13"
 lzma-rs                 = "0.3"
 num_cpus                = "1"
